конфигурация для логов расширена
